--- a/app/src/scrollExprimental/res/layout/activity_coordinatorlayout.xml
+++ b/app/src/scrollExprimental/res/layout/activity_coordinatorlayout.xml
@@ -8,48 +8,6 @@
     android:orientation="vertical"
     tools:context=".CoordinatorLayoutActivity">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        >
-        <!--    <com.google.android.material.appbar.AppBarLayout-->
-        <!--        android:layout_width="match_parent"-->
-        <!--        android:layout_height="wrap_content"-->
-        <!--        android:theme="@style/AppTheme.AppBarOverlay"-->
-        <!--        >-->
-        <!--        &lt;!&ndash;                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"&ndash;&gt;-->
-        <!--        &lt;!&ndash;        tools:expanded="false"&ndash;&gt;-->
-        <!--        &lt;!&ndash;                app:liftOnScrollTargetViewId="@id/lv"&ndash;&gt;-->
-
-
-        <!--        <TextView-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_gravity="center"-->
-        <!--            android:text="safsafasfdsadfdsaf"/>-->
-        <!--    </com.google.android.material.appbar.AppBarLayout>-->
-
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/hsv"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@android:color/black"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/lightGreyBlue"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_behavior="com.hawksjamesf.spacecraft.listener.ViewOffsetBehavior"
-            tools:listitem="@layout/item_nest"
-            />
-        <!--        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"-->
-        <!--        app:layout_behavior="@string/bottom_sheet_behavior"-->
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_content"
         android:layout_width="match_parent"
@@ -58,4 +16,48 @@
         android:background="@color/apricot"
         tools:listitem="@layout/item_nest"
         />
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        >
+
+        <!--        <com.google.android.material.appbar.AppBarLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:theme="@style/AppTheme.AppBarOverlay"-->
+        <!--            >-->
+        <!--            &lt;!&ndash;                app:liftOnScroll="true"&ndash;&gt;-->
+        <!--            &lt;!&ndash;                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"&ndash;&gt;-->
+        <!--            &lt;!&ndash;        tools:expanded="false"&ndash;&gt;-->
+        <!--            &lt;!&ndash;                app:liftOnScrollTargetViewId="@id/lv"&ndash;&gt;-->
+
+
+        <!--            <TextView-->
+        <!--                android:layout_width="wrap_content"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_gravity="center"-->
+        <!--                android:text="safsafasfdsadfdsaf"/>-->
+        <!--        </com.google.android.material.appbar.AppBarLayout>-->
+
+        <com.hawksjamesf.spacecraft.TabsLayout
+            android:id="@+id/tl_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+        <!--            app:layout_behavior="com.hawksjamesf.spacecraft.listener.TabsBehavior"-->
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_content"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@color/lightGreyBlue"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_behavior="com.hawksjamesf.spacecraft.listener.NestedScrollingBehavior"
+            tools:listitem="@layout/item_nest"
+            />
+        <!--            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"-->
+        <!--        app:layout_behavior="@string/bottom_sheet_behavior"-->
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </LinearLayout>
