--- a/app/src/main/res/layout/activity_parallax.xml
+++ b/app/src/main/res/layout/activity_parallax.xml
@@ -60,7 +60,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/apricot"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
