--- a/common/src/carousel/res/layout/item_dump.xml
+++ b/common/src/carousel/res/layout/item_dump.xml
@@ -6,7 +6,7 @@
               android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/tv"
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1"/>
