--- a/common/src/carousel/res/layout/view_carousel.xml
+++ b/common/src/carousel/res/layout/view_carousel.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:parentTag="android.widget.FrameLayout">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/vp_content"
@@ -25,4 +26,4 @@
         android:textSize="10sp"
         tools:text="1/4"/>
 
-</FrameLayout>
+</merge>
