--- a/common/src/carousel/res/layout/view_pager.xml
+++ b/common/src/carousel/res/layout/view_pager.xml
@@ -30,6 +30,17 @@
             app:layout_behavior="com.hawksjamesf.common.listener.NestedScrollingBehavior"
             tools:listitem="@layout/item_nest"
             />
+
+
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:id="@+id/fab"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="@dimen/fab_margin"-->
+<!--            app:fabSize="auto"-->
+<!--            app:layout_anchor="@id/rv_content"-->
+<!--            app:layout_anchorGravity="bottom|right|end"-->
+<!--            app:srcCompat="@android:drawable/ic_dialog_email" />-->
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
