--- a/common/src/carousel/res/layout/view_pager.xml
+++ b/common/src/carousel/res/layout/view_pager.xml
@@ -24,7 +24,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_content"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:background="@color/lightGreyBlue"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="com.hawksjamesf.common.listener.NestedScrollingBehavior"
@@ -32,15 +32,15 @@
             />
 
 
-<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-<!--            android:id="@+id/fab"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="@dimen/fab_margin"-->
-<!--            app:fabSize="auto"-->
-<!--            app:layout_anchor="@id/rv_content"-->
-<!--            app:layout_anchorGravity="bottom|right|end"-->
-<!--            app:srcCompat="@android:drawable/ic_dialog_email" />-->
+        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+        <!--            android:id="@+id/fab"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_margin="@dimen/fab_margin"-->
+        <!--            app:fabSize="auto"-->
+        <!--            app:layout_anchor="@id/rv_content"-->
+        <!--            app:layout_anchorGravity="bottom|right|end"-->
+        <!--            app:srcCompat="@android:drawable/ic_dialog_email" />-->
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
