--- a/common/src/carousel/res/values/attrs.xml
+++ b/common/src/carousel/res/values/attrs.xml
@@ -4,4 +4,10 @@
         <attr name="cv_autoStart" format="boolean"/>
         <attr name="cv_interval" format="integer"/>
     </declare-styleable>
+    <declare-styleable name="PagerView">
+        <attr name="pv_orientation" format="enum">
+            <enum name="horizontal" value="0"/>
+            <enum name="vertical" value="1"/>
+        </attr>
+    </declare-styleable>
 </resources>
