--- a/common/src/carousel/res/layout/view_pager.xml
+++ b/common/src/carousel/res/layout/view_pager.xml
@@ -11,36 +11,25 @@
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         >
 
         <com.hawksjamesf.common.TabsLayout
             android:id="@+id/tl_tabs"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
-        <!--            app:layout_behavior="com.hawksjamesf.spacecraft.listener.TabsBehavior"-->
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:background="@color/lightGreyBlue"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_behavior="com.hawksjamesf.common.listener.NestedScrollingBehavior"
             tools:listitem="@layout/item_nest"
             />
 
-
-        <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-        <!--            android:id="@+id/fab"-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_margin="@dimen/fab_margin"-->
-        <!--            app:fabSize="auto"-->
-        <!--            app:layout_anchor="@id/rv_content"-->
-        <!--            app:layout_anchorGravity="bottom|right|end"-->
-        <!--            app:srcCompat="@android:drawable/ic_dialog_email" />-->
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
