--- a/common/src/carousel/res/layout/activity_viewpager.xml
+++ b/common/src/carousel/res/layout/activity_viewpager.xml
@@ -28,6 +28,17 @@
                 android:layout_height="200dp"
                 tools:itemCount="5"
                 tools:listitem="@layout/item_control"/>
+            <ImageView
+            android:id="@+id/iv_compunt"
+            android:layout_width="wrap_content"
+            android:text="adfdasfasf"
+            android:layout_height="wrap_content"/>
+            <TextView
+                android:drawableRight="@drawable/rotate"
+                android:id="@+id/tv_compunt"
+                android:layout_width="wrap_content"
+                android:text="adfdasfasf"
+                android:layout_height="wrap_content"/>
 
 
         </com.google.android.flexbox.FlexboxLayout>
