--- a/common/src/newLayoutExprimental/res/layout/template.xml
+++ b/common/src/newLayoutExprimental/res/layout/template.xml
@@ -14,6 +14,7 @@
         android:minWidth="20dp"
         android:minHeight="20dp"
         app:content="@+id/textview444"
+        app:layout_goneMarginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guideline2"/>
 
