feat—>UI:constrain layout performance

--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="apricot">#ffa86a</color>
     <color name="afasf">#d6d7d7</color>
     <color name="lightGreyBlue">#9cb3dd</color>
+    <color name="bottom_navigation_colors">#9cb3dd</color>
 </resources>
