--- a/uicomponent/animationsExprimental/main/res/layout/item_image_and_text.xml
+++ b/uicomponent/animationsExprimental/main/res/layout/item_image_and_text.xml
@@ -5,6 +5,7 @@
              android:background="@android:color/white"
              android:padding="5dp"
              android:transitionGroup="false"
+             android:id="@+id/fl_item"
     >
 
     <FrameLayout
