--- a/uicomponent/animationsExprimental/main/res/layout/activity_detail.xml
+++ b/uicomponent/animationsExprimental/main/res/layout/activity_detail.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center_horizontal"
               android:orientation="vertical">
+
+    <Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:logo="@mipmap/ic_launcher"
+        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
+        android:background="@android:color/white"
+        app:subtitle="subtitle"
+        app:title="title"/>
 
     <ImageView
         android:id="@+id/iv_cover"
