--- a/uicomponent/animationsExprimental/main/res/layout/activity_transition_for_activity.xml
+++ b/uicomponent/animationsExprimental/main/res/layout/activity_transition_for_activity.xml
@@ -6,7 +6,7 @@
               android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv"
+        android:id="@+id/rv_image_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:itemCount="9"
