--- a/uicomponent/parallax/main/res/layout/activity_parallax.xml
+++ b/uicomponent/parallax/main/res/layout/activity_parallax.xml
@@ -31,7 +31,7 @@
 
     </FrameLayout>
 
-    <com.hawksjamesf.spacecraft.CustClipView
+    <com.hawksjamesf.uicomponent.CustClipView
         android:layout_gravity="center"
         android:id="@+id/ccv"
         android:layout_width="wrap_content"
@@ -101,7 +101,7 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <com.hawksjamesf.spacecraft.CustListView
+        <com.hawksjamesf.uicomponent.CustListView
             android:id="@+id/lv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
