--- a/app/navigation/main/res/layout/fragment_flow_step_two.xml
+++ b/app/navigation/main/res/layout/fragment_flow_step_two.xml
@@ -17,13 +17,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.FlowStepFragment">
+    tools:context=".fragment.FlowStepFragment">
 
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="step_one"
+        android:text="step_two"
         android:textAlignment="center"
         android:textSize="52sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,13 +31,13 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25"/>
+        app:layout_constraintVertical_bias="0.25" />
 
     <Button
         android:id="@+id/bt_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="next_step_button"
+        android:text="finish_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text"/>
+        app:layout_constraintTop_toBottomOf="@+id/text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
