--- a/uicomponent/scrollExprimental/main/res/layout/activity_coordinatorlayout.xml
+++ b/uicomponent/scrollExprimental/main/res/layout/activity_coordinatorlayout.xml
@@ -18,50 +18,38 @@
         app:liftOnScroll="true"
         tools:expanded="false">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+        <com.hawksjamesf.uicomponent.coordinator.CollapsingBarsLayout
             android:id="@+id/ctbl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             android:minHeight="100dp"
-            app:collapsedTitleGravity="left"
-            app:contentScrim="@android:color/transparent"
-            app:expandedTitleGravity="right"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
-            app:statusBarScrim="@android:color/transparent"
-            app:titleEnabled="true"
-            app:toolbarId="@id/tb">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-            <LinearLayout
+
+            <ImageView
+                android:id="@+id/iv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="?attr/actionBarSize"
-                android:orientation="vertical"
-                app:layout_collapseMode="parallax"
-                app:layout_collapseParallaxMultiplier="0">
+                android:layout_below="@id/tb"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/tmp" />
 
-                <ImageView
-                    android:id="@+id/iv"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:adjustViewBounds="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/tmp" />
-
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tablayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/apricot"
-                    app:layout_collapseMode="pin" />
-            </LinearLayout>
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tablayout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_below="@id/iv"
+                app:tabMode="auto"
+                android:background="@color/apricot" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/tb"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/apricot"
-                app:layout_collapseMode="pin"
+                app:hotel_layout_collapseMode="pin"
                 app:logo="@mipmap/ic_launcher"
                 app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
@@ -69,7 +57,8 @@
                 app:title="title" />
 
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.hawksjamesf.uicomponent.coordinator.CollapsingBarsLayout>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
