--- a/uicomponent/photo/main/res/layout/activity_photo.xml
+++ b/uicomponent/photo/main/res/layout/activity_photo.xml
@@ -1,41 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/apricot"
-    android:fitsSystemWindows="true"
-    tools:context="com.hawksjamesf.spacecraft.photo.PhotoActivity">
+    android:background="@android:color/black"
+    android:fitsSystemWindows="true">
 
     <!--<com.google.android.material.appbar.AppBarLayout-->
-        <!--android:id="@+id/appbar"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="60dp"-->
-        <!--android:background="@android:color/holo_blue_bright"-->
-        <!--android:theme="@style/AppTheme.AppBarOverlay">-->
+    <!--android:id="@+id/appbar"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="60dp"-->
+    <!--android:background="@android:color/holo_blue_bright"-->
+    <!--android:theme="@style/AppTheme.AppBarOverlay">-->
 
-        <!--<androidx.appcompat.widget.Toolbar-->
-            <!--android:id="@+id/toolbar"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="?attr/actionBarSize"-->
-            <!--android:layout_weight="1"-->
-            <!--android:background="@color/lightGreyBlue"-->
-            <!--app:layout_scrollFlags="scroll|enterAlways"-->
-            <!--app:popupTheme="@style/AppTheme.PopupOverlay"-->
-            <!--&gt;-->
-            <!--&lt;!&ndash;android:background="?attr/colorPrimary"&ndash;&gt;-->
+    <!--<androidx.appcompat.widget.Toolbar-->
+    <!--android:id="@+id/toolbar"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="?attr/actionBarSize"-->
+    <!--android:layout_weight="1"-->
+    <!--android:background="@color/lightGreyBlue"-->
+    <!--app:layout_scrollFlags="scroll|enterAlways"-->
+    <!--app:popupTheme="@style/AppTheme.PopupOverlay"-->
+    <!--&gt;-->
+    <!--&lt;!&ndash;android:background="?attr/colorPrimary"&ndash;&gt;-->
 
-        <!--</androidx.appcompat.widget.Toolbar>-->
+    <!--</androidx.appcompat.widget.Toolbar>-->
 
     <!--</com.google.android.material.appbar.AppBarLayout>-->
 
     <androidx.viewpager.widget.ViewPager
-        android:fitsSystemWindows="true"
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:fitsSystemWindows="true" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
