add mock dispatch

--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,6 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">android.bugly.qq.com</domain>
         <domain includeSubdomains="true">cdn.trojx.me</domain>
+        <domain includeSubdomains="true">spacecraft.com</domain>
     </domain-config>
 </network-security-config>
