--- a/uicomponent/parallax/main/res/layout/activity_parallax.xml
+++ b/uicomponent/parallax/main/res/layout/activity_parallax.xml
@@ -8,6 +8,7 @@
     android:orientation="horizontal">
 
     <FrameLayout
+        android:visibility="gone"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_margin="30dp"
@@ -16,6 +17,7 @@
        >
 
         <FrameLayout
+
             android:background="@color/colorAccent"
             android:layout_width="60dp"
             android:layout_height="60dp"
@@ -32,6 +34,7 @@
     </FrameLayout>
 
     <com.hawksjamesf.uicomponent.CustClipView
+        android:visibility="gone"
         android:layout_gravity="center"
         android:id="@+id/ccv"
         android:layout_width="wrap_content"
