--- a/uicomponent/animationsExprimental/main/res/layout/item_image_and_text.xml
+++ b/uicomponent/animationsExprimental/main/res/layout/item_image_and_text.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="200dp"
+             android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:color/white"
              android:padding="5dp"
@@ -8,15 +8,15 @@
              android:id="@+id/fl_item"
     >
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/placeholder"
-        />
+<!--    <FrameLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="@drawable/placeholder"-->
+<!--        />-->
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         >
