--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -60,8 +60,8 @@
                         android:fitsSystemWindows="true"
                         android:scaleType="centerCrop"
                         android:src="@drawable/tmp"
-                        app:layout_collapseMode="parallax"
-                        app:layout_collapseParallaxMultiplier="0" />
+                        app:cbl_layout_collapseMode="parallax"
+                        app:cbl_layout_collapseParallaxMultiplier="0" />
                     <!--app:layout_collapseParallaxMultiplier="1" 当视差因子为1时，ImageView固定不动-->
 
                     <!--android:layout_gravity="bottom"-->
