--- a/uicomponent/animationsExprimental/main/res/layout/activity_transition_for_activity.xml
+++ b/uicomponent/animationsExprimental/main/res/layout/activity_transition_for_activity.xml
@@ -4,7 +4,26 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/bt_PageSnap"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="50dp"
+            android:text="page snap" />
+
+        <Button
+            android:id="@+id/bt_linearSnap"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="50dp"
+            android:text="linea snap" />
+
+    </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_image_text"
         android:layout_width="match_parent"
