--- a/map/src/main/res/layout/activity_location.xml
+++ b/map/src/main/res/layout/activity_location.xml
@@ -3,5 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="afasdfasfdasdfasdfasdfas"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
