--- a/map/src/main/res/layout/item_cell_info.xml
+++ b/map/src/main/res/layout/item_cell_info.xml
@@ -44,6 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:text="lat"
             android:textColor="@android:color/holo_blue_light"
             android:textSize="20sp" />
@@ -53,6 +55,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:text="lon"
             android:textColor="@android:color/holo_blue_light"
             android:textSize="20sp" />
